added user login through Google+ Auth

--- a/style/less/content.less
+++ b/style/less/content.less
@@ -1,4 +1,4 @@
-@import 'content.header.less';
+@import 'header/header.less';
 @import 'expenses/expenses';
 @import 'categories/categories';
 @import 'statistics/statistics';
