--- a/style/less/header/header.less
+++ b/style/less/header/header.less
@@ -45,13 +45,31 @@
             display: none;
         }
     }
-    .button {
+
+    #user-stuff {
         margin: 10px;
         float: right;
-        background: #DD4B39;
 
-        &:hover {
-            .box-shadow(0px 0px 4px 0px #DD4B39 inset);
+        * {
+            vertical-align: middle;
+        }
+
+        button {
+            background: #DD4B39;
+
+            &:hover {
+                .box-shadow(0px 0px 4px 0px #DD4B39 inset);
+            }
+        }
+
+        .user-image {
+            width: 42px;
+            height: 42px;
+            border-radius: 100%;
+        }
+
+        .user-name {
+            font-weight: lighter;
         }
     }
 }
