--- a/style/less/main.less
+++ b/style/less/main.less
@@ -1,4 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
 @import 'vars/colors';
 @import 'vars/box';
@@ -28,7 +29,7 @@ body {
     outline: none;
     background-color: #f2f2f2;
     overflow: hidden;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
     font-size: 1em;
     color: #444;
 }
